kubernetes/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defi-providers
spec:
  replicas: 1
  selector:
    matchLabels:
      component: defi-providers
  template:
    metadata:
      labels:
        component: defi-providers
    spec:
      containers:
        - name: defi-providers
          image: "IMAGE"
          command: ["node"]
          args: ["dist/main.js"]
          ports:
            -
              name: defi-providers-port
              containerPort: 3002
