kubernetes/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: defi-providers-service
spec:
  selector:
    app: defi-providers
  ports:
    - name: grpc
      port: 3002
      targetPort: 3002
  type: NodePort
